v2.2.0 Fix PWA resource/Toolbar spacing consistent

--- a/src/app/views/detailed-capture/detailed-capture.component.scss
+++ b/src/app/views/detailed-capture/detailed-capture.component.scss
@@ -1,3 +1,7 @@
+.paddingless-toolbar {
+  padding: 0px;
+}
+
 .capture-details-content {
   margin:10px;
 }
